--- a/app/views/dish_templates/list.html.erb
+++ b/app/views/dish_templates/list.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Dish list
+  Favorite Dishes
 </h1>
 
 <a href="/new_dish_form">
@@ -53,14 +53,16 @@
     </td>
 
     <td>
-      <%= dish.cuisine %>
+      <%= dish.cuisine.name %>
     </td>
 
-    
-    <%# restaurant = Restaurant.where({:restaurant_id => @restaurant_id }) %>
-    
     <td>
-      <%= dish.restaurant %>
+      <!--<%#= dish.restaurant.name %>-->
+    </td>
+
+   
+    <td>
+      <!--<%#= restaurant.address %>-->
     </td>
     
     <td>
