--- a/app/views/restaurant_templates/list.html.erb
+++ b/app/views/restaurant_templates/list.html.erb
@@ -18,9 +18,9 @@
       Name
     </th>
 
-    <th>
-      Address
-    </th>
+    <!--<th>-->
+      <!--Address-->
+    <!--</th>-->
 
     <th>
       Created at
@@ -44,9 +44,9 @@
       <%= restaurant.name %>
     </td>
 
-    <td>
-      <%= restaurant.address %>
-    </td>
+    <!--<td>-->
+      <%#= restaurant.address %>
+    <!--</td>-->
 
     <td>
       <%= time_ago_in_words(restaurant.created_at) %> ago
