--- a/app/views/dish_templates/blank_form.html.erb
+++ b/app/views/dish_templates/blank_form.html.erb
@@ -20,7 +20,6 @@
       Cuisine
   </label>
 
-
 <select name="cuisine_id" id="cuisine_dropdown">
     <% Cuisine.all.each do |cuisine| %>
       <option value="<%= cuisine.id %>">
@@ -30,29 +29,50 @@
     <% end %>
     
 </select>
-
 </div> 
 
-<div class="row">
-  <div class="column">
-    <label for="restaurant">
+
+
+<div>
+  <label for="restaurant">
       Restaurant
-    </label>
-    <input type="text" id="restaurant" name="restaurant" value="<%= @dish.restaurant %>">
-  </div>
-  <div class="column">
-<label for="restaurant">
-      Address
-    </label>
+  </label>
+
+<select name="restaurant_id" id="restaurant_dropdown">
+    <% Restaurant.all.each do |restaurant| %>
+      <option value="<%= restaurant.id %>">
+        <%= restaurant.name %>
+       
+      </option>
+    <% end %>
+    
+</select>
+</div> 
+
+
+
+
+<!--<div class="row">-->
+  <!--<div class="column">-->
+    <!--<label for="restaurant">-->
+      <!--Restaurant-->
+    <!--</label>-->
+    <!--<input type="text" id="restaurant" name="restaurant" value="<%#= @dish.restaurant %>">-->
+  <!--</div>-->
+  <!--<div class="column">-->
+<!--<label for="restaurant">-->
+      <!--Address-->
+    <!--</label>-->
     <!--<input type="text" id="address" name="address" value="<%#= @restaurant.address %>">-->
-  </div>
-</div>
+  <!--</div>-->
+<!--</div>-->
+
 
   <!--<div>-->
     <!--<label for="restaurant">-->
       <!--Restaurant-->
     <!--</label>-->
-    <!--<input type="text" id="restaurant" name="restaurant" value="<%= @dish.restaurant %>">-->
+    <!--<input type="text" id="restaurant" name="restaurant" value="<%#= @dish.restaurant %>">-->
   <!--</div>-->
 
 
