--- a/app/views/restaurant_templates/blank_form.html.erb
+++ b/app/views/restaurant_templates/blank_form.html.erb
@@ -15,13 +15,13 @@
     <input type="text" id="name" name="name" value="<%= @restaurant.name %>">
   </div>
 
-  <div>
-    <label for="address">
-      Address
-    </label>
+  <!--<div>-->
+    <!--<label for="address">-->
+      <!--Address-->
+    <!--</label>-->
 
-    <input type="text" id="address" name="address" value="<%= @restaurant.address %>">
-  </div>
+    <!--<input type="text" id="address" name="address" value="<%#= @restaurant.address %>">-->
+  <!--</div>-->
 
   <button>
     Create restaurant
